--- a/02_microservicios.ipynb
+++ b/02_microservicios.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Es una arquitectura en la que un sistema en el que cada uno de sus componentes está tan acoplado, que un cambio en uno de dichos componentes implica una modificación mayor al sistema."
+    "Es una arquitectura que consiste en sistemas en los que cada uno de sus componentes está tan acoplado (coupled), que un cambio en uno de dichos componentes implica una modificación mayor al sistema."
    ]
   },
   {
