--- a/03_arquitectura_y_patrones.ipynb
+++ b/03_arquitectura_y_patrones.ipynb
@@ -23,10 +23,10 @@
     "### Ventajas.\n",
     "\n",
     "* Permite la entrega continua y despliegue de aplicaciones grandes y complejas.\n",
-    "* Los servicios son pequeños y de fácil mantrenimiento.\n",
+    "* Los servicios son pequeños y de fácil mantenimiento.\n",
     "* Los servicios pueden ser desplegados de forma independiente.\n",
     "* Los servicios escalan de forma independiente.\n",
-    "* La arquitectrura de microservicios permite organizar equios autónomos.\n",
+    "* La arquitectura de microservicios permite organizar equipos autónomos.\n",
     "* Facilita la experimentación y adopción de nuevas tecnologías.\n",
     "* Cuenta con mejor aislamiento en caso de fallas."
    ]
@@ -39,7 +39,7 @@
     "\n",
     "* Encontrar el servicio correcto es complicado.\n",
     "* Los sistemas distribuidos son complejos, lo que hace el desarrollo, pruebas y despliegue, difícil.\n",
-    "* Desplegar funcionalidades que implican a varios servicios requiere de una coordinaci;ón cuidadosa.\n",
+    "* Desplegar funcionalidades que implican a varios servicios requiere de una coordinación cuidadosa.\n",
     "* Decidir cuándo adoptar la arquitectura de microservicios es difícil."
    ]
   },
@@ -58,7 +58,7 @@
    "source": [
     "### 1. *SOA* bien atomizado.\n",
     "\n",
-    "Este patron aplica los mismos principios de la Arquitectrura Orientada a Servicios (*SOA), pero reduce los incidentes fragmentando la infraestrucrtrura en piezas granulares."
+    "Este patron aplica los mismos principios de la Arquitectrura Orientada a Servicios (*SOA*), pero reduce los incidentes fragmentando la infraestructura en piezas granulares."
    ]
   },
   {
@@ -70,7 +70,7 @@
     "* Trabaja bien en pequeña escala.\n",
     "* Centrado en la integración con cada microservicio dependiendo de sistemas externos.\n",
     "* Se enfoca en servicios pequeños.\n",
-    "* Adolece de lata velocidad de cambio debido a la ntercomunicación entre procesos.\n",
+    "* Adolece de alta velocidad de cambio debido a la intercomunicación entre procesos.\n",
     "* La consistencia de los datos es pobre debido a que no hay gestión del estado del sistema\n",
     "* Los sistemas de gestión existentes no pueden manejar el número crecientre de servicios."
    ]
@@ -93,12 +93,12 @@
     "#### Características:\n",
     "\n",
     "* Funcionan bien a pequeña escala.\n",
-    "* Incrementan la flexibilidad mientras separa la estructuras de la arquitectrura en ámbitos separados.\n",
+    "* Incrementan la flexibilidad mientras separan la estructura de la arquitectura en ámbitos separados.\n",
     "* Es necesario hacer múltiples llamadas entre capas.\n",
     "* Las herramientas de gestión convencionales no son capaces de visualizar vistas de microservicios complejos.\n",
     "* La consistencia de los datos mejora.\n",
-    "* * Son necesarias tecnologíasa adicionales como un *service mesh* o un *API Gateway* para gestionar y asegurar a todos los elementos.\n",
-    "* La velocidad de cambio es reducida debido a que cada microservico del sistema depende de sistemas externos.\n",
+    "* Son necesarias tecnologías adicionales como un *service mesh* o un *API Gateway* para gestionar y asegurar a todos los elementos.\n",
+    "* La velocidad de cambio es reducida debido a que cada microservicio del sistema depende de sistemas externos.\n",
     "* Carece de capacidades de gestión del estado del sistema.\n",
     "* Permite reutilizadción en lato grado.\n",
     "* Alta coherencia debido a una arquitecura estructurada."
@@ -112,7 +112,7 @@
     "\n",
     "Este patrón garantiza la integridad del sistema replicando el estado de los datos críticos de negocio entre microservicios o *datastores*. \n",
     "\n",
-    "Lo anterior habilita a los sistemas a actuar ante eventos y proveen una visibilidad externa usando colas de mensajes, permitiendo que el estado sea enviado asíncronamentea diferentes sitios o cpnsumido por Otros microservicios. \n",
+    "Lo anterior habilita a los sistemas a actuar ante eventos y proveen una visibilidad externa usando colas de mensajes, permitiendo que el estado sea enviado asíncronamente a diferentes sitios o consumido por otros microservicios. \n",
     "\n",
     "Al desacoplar los componentes,la implementación y el comportamiento se vuelven opacos."
    ]
@@ -124,7 +124,7 @@
     "#### Características:\n",
     "\n",
     "* Aumenta la complejidad debido a las capacidades de gestión del estado del sistema.\n",
-    "* Las implementaciones peuden ser incosisitentes y difíciles de reutilizar debido a que no existe un patrón estándar.\n",
+    "* Las implementaciones pueden ser incosistentes y difíciles de reutilizar debido a que no existe un patrón estándar.\n",
     "* Falta de soluciones en el caso de conflictos con los datos o reconstrucción del estado a causa de fallos o caídas del sistema.\n",
     "* Comunicación eficiente entre procesos debido a la asincronía.\n",
     "* La consistencia de los datos y la gestión del estado del sistema son impactadas por la impredecibilidad del comportamiento  y los efectos potenciales de algún mensaje.\n",
@@ -146,9 +146,9 @@
    "source": [
     "Los patrones dirigidos por eventos para la actualización de datos en tiempo real son críticos pasa casos de uso de detección de fraudes, notificación de flujos de trabajo, servicios de notificaciones, etc.\n",
     "\n",
-    "Las arquitecturas dirigidas por eventos hacen uso de encolados pero cuentan con estándares tanto para el comportamiento com  para el diseño que deben de ser garantizados para poder atender un evento.\n",
+    "Las arquitecturas dirigidas por eventos hacen uso de encolados pero cuentan con estándares tanto para el comportamiento como  para el diseño que deben de ser garantizados para poder atender un evento.\n",
     "\n",
-    "Un evento es una cción asociada a una representación de un estado y una estampa de tiempo. Los eventos permitem a los servicios recibirlosc y reconstruir una vista del estado recreando el orden de los eventos."
+    "Un evento es una acción asociada a una representación de un estado y una estampa de tiempo. Los eventos permiten a los servicios recibirlos y reconstruir una vista del estado recreando el orden de los eventos."
    ]
   },
   {
@@ -158,7 +158,7 @@
     "#### Características.\n",
     "\n",
     "* Aumenta la compejidad al ser capaz de gestionar estados.\n",
-    "* La implementaci;on puede ser inconsistente al no existir patrones estándar.\n",
+    "* La implementación puede ser inconsistente al no existir patrones estándar.\n",
     "* Falta de soluciones en el caso de conflictos con los datos o reconstrucción del estado a causa de fallos o caídas del sistema.\n",
     "* Comunicación eficiente entre procesos debido a la asincronía.\n",
     "* La flexibilidad del diseño es sacrificada a favor de un comportamiento predecible.\n",
@@ -174,7 +174,7 @@
    "source": [
     "### 5. Estados aislados en capas de *APIs*.\n",
     "\n",
-    "Cada microservicio se vuelve una sola *fuente de verdad* conteniendo una *datastore* interna que se sincroniza constantemente con las *datastores* del sistema ya sean una bitácora o un elemento del sistema."
+    "Cada microservicio se vuelve una sola *fuente de verdad* conteniendo una *datastore* interna que se sincroniza constantemente con las *datastores* del sistema ya sean mediante una bitácora o un elemento del sistema."
    ]
   },
   {
@@ -183,14 +183,14 @@
    "source": [
     "#### Características:\n",
     "\n",
-    "* Arquitectura fácilde usar debido a su naturaleza estandarizada.\n",
-    "* Requiere de alguna gobernanza para garantizar que los datos no sean copiadosa sean accedidos de forma impropia.\n",
-    "* Puede ser difícil de imponer cuando existen elementos monolítcos.\n",
-    "* No es fácil regresar a un estado anterios si los datos de las entidades se desincronizan.\n",
+    "* Arquitectura fácil de usar debido a su naturaleza estandarizada.\n",
+    "* Requiere de alguna gobernanza para garantizar que los datos no sean copiados u que sean accedidos de forma impropia.\n",
+    "* Puede ser difícil de implementar cuando existen elementos monolítcos.\n",
+    "* No es fácil regresar a un estado anterior si los datos de las entidades se desincronizan.\n",
     "* El reuso no es una prioridad.\n",
     "* El diseño flexible incrementa la velocidad del cambio.\n",
     "* La escalabilidad podría ser complicada debido a la escalabilidad del almacenamiento.\n",
-    "* Es dificil dividir um modelo de datos escalable en piezas independientes."
+    "* Es dificil dividir un modelo de datos escalable en piezas independientes."
    ]
   },
   {
@@ -199,7 +199,7 @@
    "source": [
     "### 6. Replicación de estado en capas de *APIs*.\n",
     "\n",
-    "Replicar el estado de un sistema reuqiere de un profundo entendimiento del proceso de gestión y el comportamiento de cada servicio para que sea predecible. Este diseño puede ser consistrente eventualmente."
+    "Replicar el estado de un sistema requiere de un profundo entendimiento del proceso de gestión y el comportamiento de cada servicio para que sea predecible. Este diseño puede ser consistente eventualmente."
    ]
   },
   {
@@ -209,12 +209,12 @@
     "#### Características.\n",
     "\n",
     "* Crea una arquitectura coherente.\n",
-    "* Extremadamente escalable debido a la separación entre las pteciones de consulta-comando.\n",
+    "* Extremadamente escalable debido a la separación entre las peticiones de consulta-comando.\n",
     "* Coexiste con procesamiento de eventos.\n",
     "* Comunicación eficiente entre procesos debido a la asicronía.\n",
     "* El diseño flexible incrementa la velocidad de cambio.\n",
     "* La consistencia de datos es moderada, pero alcanza una sola \"fuente de verdad\".\n",
-    "* La escalabilidad es efectiva en vista de que cada piueza puede escalar independientemente."
+    "* La escalabilidad es efectiva en vista de que cada pieza puede escalar independientemente."
    ]
   },
   {
