--- a/04_kubernetes_y_microservicios.ipynb
+++ b/04_kubernetes_y_microservicios.ipynb
@@ -35,7 +35,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Imágenes de contendores.\n",
+    "### Imágenes de contenedores.\n",
     "\n",
     "Los contendores son creados a partir de imágenes de las cuales son instanciados. Dichas imágenes pueden ser guardadas y accedidas en un *registry*."
    ]
@@ -48,7 +48,7 @@
     "\n",
     "Cuando un contenedor es *instanciado* por primera vez, éste es idéntico a la imagen de origen y se le asigna un \"volumen\". A cada operación de escritura en el volumen se le asigna un *hash* único que es registrado de tal forma que dichas operaciones puedan ser reconstruidas desde la imagen original.\n",
     "\n",
-    "El sistema de archivos utilizado es [*UnionFS*](https://es.wikipedia.org/wiki/UnionFS)."
+    "https://docs.docker.com/storage/storagedriver/"
    ]
   },
   {
@@ -57,7 +57,7 @@
    "source": [
     "### Volúmenes.\n",
     "\n",
-    "Debido a la naturaleza efímera de los contenedores, no se recomienda utilizar sus volúmenre como un medio de almacenamiento perisitente, pero es posible relacionar y \"montar\" un volumen externo a una ruta dentro del sistema de archivos del contenedor. "
+    "Debido a la naturaleza efímera de los contenedores, no se recomienda utilizar sus volúmenes como un medio de almacenamiento persistente, pero es posible relacionar y \"montar\" un volumen externo a una ruta dentro del sistema de archivos del contenedor. "
    ]
   },
   {
@@ -187,7 +187,7 @@
    "source": [
     "## Los *pods*.\n",
     "\n",
-    "Un *pod* es la unidad básica de cómputo de *Kubernetes* y se define mediante un archivo llamado ```pod.yaml```. En dichos archivos es posible definir:\n",
+    "Un *pod* es la unidad básica de cómputo de *Kubernetes* y se describe mediante un archivo llamado ```pod.yaml```. En dichos archivos es posible definir:\n",
     "\n",
     "* Contenedores.\n",
     "* Redes.\n",
@@ -225,7 +225,7 @@
    "source": [
     "### Escalado de servicios.\n",
     "\n",
-    "El plano de control se encarga de consolidar los recursos de cómputo y memoria de el o los clusters a los que accede, creando una gran computadora virtual, en la ejecutará un número indeterminado de *pods*. El balanceo de carga y el monitoreo de la salud del cluster también es una de las funcionalidades del plano de control.\n",
+    "El plano de control se encarga de consolidar los recursos de cómputo y memoria de el o los clusters a los que accede, creando una gran computadora virtual, en la que gestionará un número indeterminado de *pods*. El balanceo de carga y el monitoreo de la salud del cluster también es una de las funcionalidades del plano de control.\n",
     "\n",
     "<img src=\"img/cluster.png\" width=\"75%\">"
    ]
@@ -284,6 +284,22 @@
     "* [```DaemonSet```](https://kubernetes.io/es/docs/concepts/workloads/controllers/daemonset/) un DaemonSet garantiza que todos (o algunos) de los nodos ejecuten una copia de un Pod. \n",
     "* [```Job```](https://kubernetes.io/es/docs/concepts/workloads/controllers/jobs-run-to-completion/) crea uno o más Pods y se asegura de que un número específico de ellos termina de forma satisfactoria.\n",
     "* [```CronJob```](https://kubernetes.io/es/docs/concepts/workloads/controllers/cron-jobs/) un Cron Job ejecuta tareas, Jobs, a intervalos regulares."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Servicios."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Un *Service* permite distribruir las peticiones de la aplicación a los *pods*.\n",
+    "\n",
+    "La labor de un *Service* es dienteficarf las *IP* de cada *Pod* y en función de ello, distribuir el trabajo y obtener las respuestas."
    ]
   },
   {
