--- a/05_ejemplo_practico_con_gcp.ipynb
+++ b/05_ejemplo_practico_con_gcp.ipynb
@@ -18,9 +18,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Arquitectura.|\n",
+    "### Arquitectura.\n",
     "\n",
     "https://github.com/GoogleCloudPlatform/microservices-demo#architecture"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## *Service mesh*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Un *service mesh*, es una capa dentro de la infraestructura de una aplicación de microservicios que hace que la comunicación entre servicios sea flexible, confiable y rápida. Proporciona descubrimiento de servicios, equilibrio de carga, cifrado, autenticación y autorización, soporte para el patrón de interruptor de circuito (*circuit-breaker*) entre otras capacidades.\n",
+    "\n",
+    "* Disponibilidad en la comunicación entre servicios.: patrones de *Circuit-breaking*, reintentos y *timeouts*, gestión de errores, balanceo de carga y *failover*…\n",
+    "* Descubrimiento de servicios: descubrimiento de los *endpoints* del servicio a través de un registro de servicio dedicado.\n",
+    "* Enrutamiento: enrutamiento de peticiones a versiones diferentes de servicios.\n",
+    "* Observabilidad: métricas, monitorización, bitácoras y trazabilidad distribuidas.\n",
+    "* Seguridad: seguridad a nivel de transporte (*TLS*) y gestión de claves.\n",
+    "* Autenticación/Autorización.\n",
+    "* Despliegue: soporte nativo para contenedores (*Docker*, *Kubernetes*).\n",
+    "* Protocolos de comunicación entre servicios: *HTTP/1.1*, *HTTP/2*, *gRPC*."
    ]
   },
   {
@@ -143,9 +166,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Clonando en 'microservices-demo'...\n",
+      "remote: Enumerating objects: 5025, done.\u001b[K\n",
+      "remote: Total 5025 (delta 0), reused 0 (delta 0), pack-reused 5025\u001b[K\n",
+      "Recibiendo objetos: 100% (5025/5025), 29.05 MiB | 6.29 MiB/s, listo.\n",
+      "Resolviendo deltas: 100% (3395/3395), listo.\n",
+      "\u001b[?2004h\u001b[?2004l"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
    "source": [
     "git clone https://github.com/GoogleCloudPlatform/microservices-demo.git\n",
     "cd microservices-demo"
@@ -153,11 +195,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[01;34m.\u001b[00m\n",
+      "├── cloudbuild.yaml\n",
+      "├── CODE_OF_CONDUCT.md\n",
+      "├── CODEOWNERS\n",
+      "├── CONTRIBUTING.md\n",
+      "├── \u001b[01;34mdocs\u001b[00m\n",
+      "│   ├── cloudshell-tutorial.md\n",
+      "│   ├── cymbal-shops.md\n",
+      "│   ├── development-guide.md\n",
+      "│   ├── development-principles.md\n",
+      "│   ├── gcp-instrumentation.md\n",
+      "│   ├── \u001b[01;34mimg\u001b[00m\n",
+      "│   ├── memorystore.md\n",
+      "│   ├── \u001b[01;34mnetwork-policies\u001b[00m\n",
+      "│   ├── service-mesh.md\n",
+      "│   └── workload-identity.md\n",
+      "├── \u001b[01;34mhack\u001b[00m\n",
+      "│   ├── license_header.txt\n",
+      "│   ├── \u001b[01;32mmake-docker-images.sh\u001b[00m\n",
+      "│   ├── \u001b[01;32mmake-release-artifacts.sh\u001b[00m\n",
+      "│   ├── \u001b[01;32mmake-release.sh\u001b[00m\n",
+      "│   └── \u001b[01;32mREADME.md\u001b[00m\n",
+      "├── \u001b[01;34mistio-manifests\u001b[00m\n",
+      "│   ├── allow-egress-googleapis.yaml\n",
+      "│   ├── frontend-gateway.yaml\n",
+      "│   └── frontend.yaml\n",
+      "├── \u001b[01;34mkubernetes-manifests\u001b[00m\n",
+      "│   ├── adservice.yaml\n",
+      "│   ├── cartservice.yaml\n",
+      "│   ├── checkoutservice.yaml\n",
+      "│   ├── currencyservice.yaml\n",
+      "│   ├── emailservice.yaml\n",
+      "│   ├── frontend.yaml\n",
+      "│   ├── loadgenerator.yaml\n",
+      "│   ├── paymentservice.yaml\n",
+      "│   ├── productcatalogservice.yaml\n",
+      "│   ├── README.md\n",
+      "│   ├── recommendationservice.yaml\n",
+      "│   ├── redis.yaml\n",
+      "│   └── shippingservice.yaml\n",
+      "├── LICENSE\n",
+      "├── \u001b[01;34mpb\u001b[00m\n",
+      "│   ├── demo.proto\n",
+      "│   └── \u001b[01;34mgrpc\u001b[00m\n",
+      "├── README.md\n",
+      "├── \u001b[01;34mrelease\u001b[00m\n",
+      "│   ├── istio-manifests.yaml\n",
+      "│   └── kubernetes-manifests.yaml\n",
+      "├── renovate.json\n",
+      "├── SECURITY.md\n",
+      "├── skaffold.yaml\n",
+      "└── \u001b[01;34msrc\u001b[00m\n",
+      "    ├── \u001b[01;34madservice\u001b[00m\n",
+      "    ├── \u001b[01;34mcartservice\u001b[00m\n",
+      "    ├── \u001b[01;34mcheckoutservice\u001b[00m\n",
+      "    ├── \u001b[01;34mcurrencyservice\u001b[00m\n",
+      "    ├── \u001b[01;34memailservice\u001b[00m\n",
+      "    ├── \u001b[01;34mfrontend\u001b[00m\n",
+      "    ├── \u001b[01;34mloadgenerator\u001b[00m\n",
+      "    ├── \u001b[01;34mpaymentservice\u001b[00m\n",
+      "    ├── \u001b[01;34mproductcatalogservice\u001b[00m\n",
+      "    ├── \u001b[01;34mrecommendationservice\u001b[00m\n",
+      "    └── \u001b[01;34mshippingservice\u001b[00m\n",
+      "\n",
+      "21 directories, 41 files\n",
+      "\u001b[?2004h"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "1",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
    "source": [
     "tree . -L 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## El código fuente de los microservicios."
    ]
   },
   {
@@ -217,12 +345,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Acceso."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "kubectl get service frontend-external | awk '{print $4}'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cierre."
    ]
   },
   {
